--- a/package.json
+++ b/package.json
@@ -27,16 +27,18 @@
     "@ant-design/charts": "1.1.13",
     "@ant-design/icons": "4.3.0",
     "@babel/polyfill": "7.4.3",
+    "@ckeditor/ckeditor5-build-classic": "^41.2.1",
+    "@ckeditor/ckeditor5-react": "6.0.0",
     "antd": "4.21.0",
     "axios": "0.21.1",
     "bootstrap": "4.5.3",
     "chalk": "2.4.2",
     "classnames": "2.3.1",
-    "compression": "1.7.4",
     "clipboard-copy": "^4.0.1",
+    "compression": "1.7.4",
     "cross-env": "5.2.0",
-    "file-saver": "^2.0.5",
     "express": "4.16.4",
+    "file-saver": "^2.0.5",
     "ip": "1.1.5",
     "jquery": "3.6.0",
     "js-cookie": "2.2.1",
@@ -57,11 +59,11 @@
     "react-router-dom": "5.2.0",
     "react-toastify": "7.0.2",
     "redux": "4.0.1",
-    "swiper": "^6.8.4",
     "redux-persist": "6.0.0",
     "redux-saga": "1.0.2",
     "sanitize.css": "8.0.0",
-    "socket.io-client": "4.1.2"
+    "socket.io-client": "4.1.2",
+    "swiper": "^6.8.4"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
@@ -126,4 +128,3 @@
     "npm": ">=5"
   }
 }
-
