--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cross-env": "5.2.0",
     "express": "4.16.4",
     "file-saver": "^2.0.5",
+    "flv.js": "^1.6.2",
     "ip": "1.1.5",
     "jquery": "3.6.0",
     "js-cookie": "2.2.1",
@@ -55,6 +56,7 @@
     "react-dom": "16.8.6",
     "react-dropzone": "11.3.2",
     "react-loading": "2.0.3",
+    "react-photo-gallery": "^8.0.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.2.0",
     "react-toastify": "7.0.2",
